[package]
name = "aliri"
description = "Implementations of the Javascript/JSON Object Signing and Encryption (JOSE) standards"
keywords = [ "jwk", "jwa", "jose", "jwt", "auth" ]
categories = [ "authentication" ]
version = "0.5.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ec = [ "openssl" ]
rsa = []
hmac = []
private-keys = [ "openssl" ]
unstable = []
default = [ "hmac", "rsa" ]

[dependencies]
aliri_base64 = { version = "0.1.0", path = "../aliri_base64", features = [ "serde" ] }
aliri_clock = { version = "0.1.0", path = "../aliri_clock", features = [ "serde" ] }
aliri_braid = { version = "0.1.5" }
lazy_static = { version = "1" }
regex = "1"
ring = "0.16"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"

# EC and Private Key support
openssl = { version = "0.10", optional = true }

[dev-dependencies]
color-eyre = "0.5"

[package.metadata.workspaces]
independent = true
