[package]
name = "aliri_axum"
description = "Axum for interacting with `aliri` authorities"
keywords = [ "axum", "jose", "jwt", "oauth2", "auth" ]
categories = [ "authentication", "web-programming", "web-programming::http-server" ]
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2021"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri = { version = "0.5.6", path = "../aliri" }
aliri_oauth2 = { version = "0.7.0", path = "../aliri_oauth2" }
aliri_traits = { version = "0.1.1", path = "../aliri_traits" }
axum-core = "0.2.5"
http = "0.2.8"
once_cell = "1"

[dev-dependencies]
aliri_clock = { version = "0.1.4", path = "../aliri_clock" }
aliri_tower = { version = "0.1.1", path = "../aliri_tower" }
axum = "0.5"
serde = { version = "1.0.137", features = [ "derive" ] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
