[package]
name = "aliri_axum"
description = "Axum for interacting with `aliri` authorities"
keywords = [ "axum", "jose", "jwt", "oauth2", "auth" ]
categories = [ "authentication", "web-programming", "web-programming::http-server" ]
version = "0.4.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2021"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri = { version = "0.6.4", path = "../aliri", default-features = false }
aliri_oauth2 = { version = "0.10.2", path = "../aliri_oauth2", default-features = false }
aliri_traits = { version = "0.1.1", path = "../aliri_traits" }
axum-core = "0.4.3"
http = "1.1.0"
once_cell = "1"

[dev-dependencies]
aliri_base64 = { version = "0.1.5", path = "../aliri_base64" }
aliri_braid = "0.4.0"
aliri_clock = { version = "0.1.4", path = "../aliri_clock" }
aliri_oauth2 = { version = "0.10.2", path = "../aliri_oauth2", features = ["rsa", "tokio", "reqwest"] }
aliri_tower = { version = "0.6.1", path = "../aliri_tower" }
axum = { version = "0.7.5", default-features = false, features = ["tokio", "http1", "http2"] }
color-eyre = "0.6.3"
reqwest = "0.12.3"
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "time" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
