[package]
name = "aliri_core"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
serde = { version = "1", features = [ "derive" ] }

[dev-dependencies]
serde_json = "1"