[package]
name = "aliri_core"
description = "Core types for the `aliri` family of crates"
version = "0.2.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
serde = { version = "1", features = [ "derive" ] }

[dev-dependencies]
serde_json = "1"

[package.metadata.workspaces]
independent = true
