[package]
name = "aliri_jose"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ec = [ "openssl", "lazy_static" ]
rsa = []
hmac = []
private-keys = [ "openssl", "lazy_static" ]
default = [ "hmac", "rsa" ]

[dependencies]
aliri_core = { path = "../aliri_core" }
aliri_macros = { path = "../aliri_macros" }
anyhow = "1"
ring = "0.16"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

# EC and Private Key support
lazy_static = { optional = true, version = "1" }
openssl = { optional = true, version = "0.10" }

[dev-dependencies]