[package]
name = "aliri_jose"
description = "Implementations of the Javascript/JSON Object Signing and Encryption (JOSE) standards"
keywords = [ "jwk", "jwa", "jose", "jwt", "auth" ]
categories = [ "authentication" ]
version = "0.1.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ec = [ "openssl" ]
rsa = []
hmac = []
private-keys = [ "openssl" ]
default = [ "hmac", "rsa" ]

[dependencies]
aliri_core = { version = "0.1.0", path = "../aliri_core" }
aliri_macros = { version = "0.1.0", path = "../aliri_macros" }
lazy_static = { version = "1" }
regex = "1"
ring = "0.16"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"

# EC and Private Key support
openssl = { version = "0.10", optional = true }

[dev-dependencies]
color-eyre = "0.4"

[package.metadata.workspaces]
independent = true
