[package]
name = "aliri_macros"
description = "Macros used by the `aliri` family of crates"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde = "1"