[package]
name = "aliri_oauth2"
description = "JWT authorization based on validating OAuth2 scopes"
keywords = [ "jose", "jwk", "jwt", "oauth2", "auth" ]
categories = [ "authentication" ]
version = "0.7.3"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

[features]
ec = [ "aliri/ec" ]
rsa = [ "aliri/rsa" ]
hmac = [ "aliri/hmac" ]
private-keys = [ "aliri/private-keys" ]
default = [ "rsa" ]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
features = [ "rsa", "ec", "hmac", "private-keys", "reqwest" ]

[dependencies]
aliri = { version = "0.5.0", path = "../aliri", default-features = false }
aliri_clock = { version = "0.1.0", path = "../aliri_clock" }
aliri_traits = { version = "0.1.0", path = "../aliri_traits" }
aliri_braid = { version = "0.2.3" }
arc-swap = "1.2"
reqwest = { version = "0.11", optional = true, features = [ "json" ] }
serde = { version = "1", features = [ "derive" ] }
smartstring = { version = "1", features = [ "serde" ] }
thiserror = "1"
tracing = "0.1.15"

[dev-dependencies]
aliri = { version = "0.5.0", path = "../aliri", features = [ "private-keys" ] }
openssl = "0.10"
serde_json = "1"
tokio = { version = "1", features = [ "rt-multi-thread", "macros" ] }

[package.metadata.workspaces]
independent = true
