[package]
name = "aliri_reqwest"
description = "Background token management and renewal for reqwest based on best practices"
keywords = [ "reqwest", "jwt", "oauth2", "auth" ]
categories = [ "authentication" ]
version = "0.5.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2021"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri_tokens = { version = "0.3.2", path = "../aliri_tokens" }
aliri_clock = { version = "0.1.4", path = "../aliri_clock" }
async-trait = "0.1.79"
bytes = "1.6.0"
http = "1.1.0"
predicates = { version = "3.1.0", default-features = false }
reqwest = { version = "0.12.3", default-features = false }
reqwest-middleware = ">=0.3.0,<0.5.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "time" ] }

[package.metadata.workspaces]
independent = true
