[package]
name = "aliri_tokens"
description = "Background token management and renewal based on best practices"
keywords = [ "jwt", "oauth2", "auth" ]
categories = [ "authentication" ]
version = "0.3.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["file", "oauth2", "rand"]
file = ["serde_json", "tokio/fs"]
oauth2 = ["reqwest"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
aliri = { version = "0.6.0", path = "../aliri" }
aliri_braid = "0.4.0"
aliri_clock = { version = "0.1.4", path = "../aliri_clock" }
async-trait = "0.1.79"
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.12", features = [ "json" ], optional = true, default-features = false }
serde = { version = "1", features = [ "derive" ] }
serde_json = { version = "1", optional = true }
thiserror = "1"
tokio = { version = "1", features = [ "time", "io-util" ] }
tracing = "0.1.40"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = [ "fmt", "env-filter" ] }
tokio = { version = "1", features = [ "rt-multi-thread", "macros" ] }
