[package]
name = "aliri_tower"
description = "Tower middleware for interacting with `aliri` authorities"
keywords = [ "tower", "jose", "jwt", "oauth2", "auth" ]
categories = [ "authentication", "web-programming", "web-programming::http-server" ]
version = "0.1.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2021"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri = { version = "0.5.0", path = "../aliri" }
aliri_traits = { version = "0.1.1", path = "../aliri_traits" }
aliri_oauth2 = { version = "0.7.0", path = "../aliri_oauth2", features = [ "reqwest" ] }
bytes = "1.1.0"
http = "0.2"
http-body = "0.4.4"
serde = { version = "1", features = [ "derive" ] }
thiserror = "1"
tracing = "0.1"
tower-layer = { version = "0.3.1" }
tower-http = { version = "0.2", features = [ "auth" ] }

[dev-dependencies]
aliri_braid = "0.2.3"
aliri_base64 = { version = "0.1.5", path = "../aliri_base64" }
aliri_clock = { version = "0.1.4", path = "../aliri_clock" }
axum = { version = "0.5.4", default-features = false }
color-eyre = "0.6"
prost = "0.9.0"
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "time" ] }
tonic = "0.6.2"
regex = "1"
reqwest = "0.11.10"
serde_json = "1"
time = { version = "0.3.9", features = ["formatting"] }

[package.metadata.workspaces]
independent = true
