[package]
name = "aliri_tower"
description = "Tower middleware for interacting with `aliri` authorities"
keywords = [ "tower", "jose", "jwt", "oauth2", "auth" ]
categories = [ "authentication", "web-programming", "web-programming::http-server" ]
version = "0.6.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2021"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri = { version = "0.6.4", path = "../aliri" }
aliri_traits = { version = "0.1.1", path = "../aliri_traits" }
aliri_oauth2 = { version = "0.10.2", path = "../aliri_oauth2", features = [ "reqwest" ] }
bytes = "1.6.0"
http = "1.1"
http-body = "1.0"
serde = { version = "1", features = [ "derive" ] }
thiserror = "1"
tracing = "0.1"
tower-layer = { version = "0.3.2" }
tower-http = { version = "0.5", features = [ "validate-request" ] }

[dev-dependencies]
## To be re-added once a Tonic example becomes viable again
# aliri_braid = "0.4.0"
aliri_base64 = { version = "0.1.5", path = "../aliri_base64" }
aliri_clock = { version = "0.1.4", path = "../aliri_clock" }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "http2"] }
# prost = "0.12"
# tokio = { version = "1", features = [ "rt-multi-thread", "macros", "net" ] }
tokio = { version = "1", features = [ "net" ] }
# tonic = { version = "0.11", features = ["gzip"] }
# tower = "0.4.13"
# regex = "1"

[package.metadata.workspaces]
independent = true
