[package]
name = "aliri_traits"
description = "Token-based authorization with authorities that verify access grants"
keywords = [ "auth", "authn" ]
categories = [ "authentication" ]
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.workspaces]
independent = true
