[package]
name = "aliri_warp"
description = "Warp filters for interacting with `aliri` authorities"
keywords = [ "warp", "jose", "jwt", "oauth2", "auth" ]
categories = [ "authentication", "web-programming", "web-programming::http-server" ]
version = "0.9.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri = { version = "0.6.4", path = "../aliri" }
aliri_oauth2 = { version = "0.10.2", path = "../aliri_oauth2", features = [ "reqwest" ] }
serde = { version = "1", features = [ "derive" ] }
thiserror = "1"
tracing = "0.1"
warp = "0.3"

[dev-dependencies]
color-eyre = "0.6"
regex = "1"
serde_json = "1"
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "time" ] }

[package.metadata.workspaces]
independent = true
